--- a/src/main/resources/public/template/numbering-pattern/numberingPatternSearch.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternSearch.html
@@ -45,7 +45,7 @@
         aliceJs.fetchText('/numberingPatterns?' + urlParam, {
             method: 'GET'
         }).then((htmlData) => {
-            document.getElementById('patternList').innerHTML = response.responseText;
+            document.getElementById('patternList').innerHTML = htmlData;
         });
     }
     /*]]>*/
