--- a/src/main/resources/public/template/report/reportTemplateSearch.html
+++ b/src/main/resources/public/template/report/reportTemplateSearch.html
@@ -44,82 +44,15 @@
     };
 
     function getList(pageNum = 1) {
-        restSearchSubmit('get', '/reports/template?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
+        const urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum;
+        aliceJs.fetchText('/reports/template?' + urlParam, {
+            method: 'GET'
+        }).then((htmlData) => {
+            const listBody = document.getElementById('templateList');
+            listBody.innerHTML = htmlData;
+            setDateTimeFormat(listBody);
+        });
     }
-    
-    function restSearchSubmit(method, url) {
-        const opt = {
-            method: method,
-            url: url,
-            async: false,
-            showProgressbar: false,
-            callbackFunc: function (response) {
-                document.getElementById('templateList').innerHTML = response.responseText;
-                setDateTimeFormat(document.getElementById('templateList'));
-            }
-        };
-        aliceJs.sendXhr(opt);
-    }
-
-    /*function getTemplateList(isScroll) {
-        let urlParam = '';
-        if (isScroll) {
-            if (offsetCount === 0) {
-                offsetCount = aliceJs.searchDataCount;
-            }
-        } else {
-            offsetCount = 0;
-        }
-        urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount + '&isScroll=' + isScroll;
-        restSubmit('get', '/reports/template?' + urlParam, isScroll);
-    }*/
-
-    // REST API
-    /*function restSubmit(method, url, isScroll) {
-        const opt = {
-            method: method,
-            url: url,
-            async: false,
-            callbackFunc: function(response) {
-                if (isScroll) {
-                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                        offsetCount = offsetCount + aliceJs.searchDataCount;
-                    }
-                    const schedulerTbody = document.querySelector('.list-body .os-content');
-                    const tbody = document.createElement('tbody');
-                    tbody.innerHTML = response.responseText;
-                    setDateTimeFormat(tbody);
-                    const container = document.createDocumentFragment();
-                    for (let i = 0; i < tbody.rows.length; i++) {
-                        let node = tbody.rows[i].cloneNode(true);
-                        container.appendChild(node);
-                    }
-                    schedulerTbody.appendChild(container)
-                } else {
-                    document.getElementById('templateList').innerHTML = response.responseText;
-                    aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                    setDateTimeFormat(document.getElementById('templateList'));
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                if (isScrollbarBottom(scrollHeight, scrollTop, clientHeight)) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        getTemplateList(true);
-                                    }
-                                }
-                            }
-                        }
-                    });
-                }
-            },
-            showProgressbar: false
-        };
-        aliceJs.sendXhr(opt);
-    }*/
 
     /**
      * 서버에서 전달받은 데이터의 날짜 포맷을 변경한다.
@@ -137,24 +70,19 @@
     }
 
     function makeReport(templateId) {
-        const opt = {
-            method: 'post',
-            url: '/rest/reports/template/' + templateId,
-            async: false,
-            callbackFunc: function (response) {
-                switch (response.responseText) {
-                    case STATUS_SUCESS:
-                        zAlert.success(i18n.msg("report.msg.createSucess"));
-                        break
-                    case STATUS_FAIL:
-                        zAlert.warning(i18n.msg("report.msg.creatFail"));
-                        break;
-                    default:
-                }
-            },
-            showProgressbar: false
-        };
-        aliceJs.sendXhr(opt);
+        aliceJs.fetchText('/rest/reports/template/' + templateId, {
+            method: 'POST'
+        }).then((status) => {
+            switch (status) {
+                case STATUS_SUCESS:
+                    zAlert.success(i18n.msg("report.msg.createSucess"));
+                    break
+                case STATUS_FAIL:
+                    zAlert.warning(i18n.msg("report.msg.creatFail"));
+                    break;
+                default:
+            }
+        });
     }
     /*]]>*/
 </script>
