--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1123,7 +1123,7 @@ table td, table th {
   background-color: #F5F5F5;
 }
 .z-option-table tr.z-option-table-row .z-checkbox, .z-option-table tr.z-option-table-row .z-radio {
-  margin: 0 0 0 0.5rem;
+  margin: 0 0 0 0.75rem;
 }
 .z-option-table tr.z-option-table-row .z-input {
   width: 85%;
@@ -7701,3 +7701,5 @@ body.modal-active {
   position: absolute;
   right: 3.75rem;
 }
+
+/*# sourceMappingURL=itsm.css.map */
